--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -82,3 +82,18 @@
     }
   }
 }
+
+.footers {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 35px;
+  h2 {
+    color: rgb(193, 200, 206);
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 17px;
+    letter-spacing: 0%;
+    text-align: left;
+  }
+}
