--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,6 +1,11 @@
 .header__top {
   height: 70px;
   border-bottom: 1px solid rgb(250, 250, 251);
+  // position: fixed;
+  // top: 0;
+  // width: 100%;
+  // z-index: 100;
+  // background-color: #fff;
 }
 
 .nav__top {
@@ -65,6 +70,9 @@ header {
   height: 90px;
   width: 100%;
   z-index: 99;
+  // position: fixed;
+  // top: 70px;
+  // background-color: #fff;
 }
 
 .nav {
