--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -78,9 +78,9 @@
     }
   }
   &__buttons {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    // display: flex;
+    // align-items: center;
+    // justify-content: center;
     background-color: rgb(51, 160, 255);
     color: #fff;
     font-size: 18px;
