--- a/src/pages/favouriteProduct/favourite.scss
+++ b/src/pages/favouriteProduct/favourite.scss
@@ -1,3 +1,7 @@
-h2 {
-  text-align: center;
+.wishes {
+  padding: 50px 0 100px 0;
+  h2 {
+    text-align: center;
+    padding-bottom: 35px;
+  }
 }
