--- a/src/components/banner/banner.scss
+++ b/src/components/banner/banner.scss
@@ -1,7 +1,7 @@
 #banner {
   background-image: url(../../assets/images/banner.png);
   background-repeat: no-repeat;
-  background-size: 100%;
+  background-size: cover;
   background-position: center;
   padding-top: 150px;
 }
