--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -10,10 +10,19 @@
 
 .row {
   display: grid;
-  grid-template-columns: repeat(4, 301px);
+  grid-template-columns: repeat(1, 301px);
   align-items: center;
   row-gap: 30px;
   justify-content: space-between;
+  @media (min-width: 650px) {
+    grid-template-columns: repeat(2, 301px);
+  }
+  @media (min-width: 900px) {
+    grid-template-columns: repeat(3, 301px);
+  }
+  @media (min-width: 1100px) {
+    grid-template-columns: repeat(4, 301px);
+  }
 }
 
 .card {
@@ -78,9 +87,11 @@
     }
   }
   &__buttons {
-    // display: flex;
-    // align-items: center;
-    // justify-content: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    z-index: 7;
     background-color: rgb(51, 160, 255);
     color: #fff;
     font-size: 18px;
@@ -118,10 +129,15 @@
   }
   &__list {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 50px;
+    row-gap: 25px;
+    column-gap: 50px;
     padding: 25px 0;
+    @media (min-width: 1100px) {
+      flex-direction: row;
+    }
     li {
       font-size: 22px;
       font-weight: 400;
