--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -5,8 +5,12 @@
 .hero {
   display: flex;
   align-items: start;
+  flex-direction: column;
   // justify-content: space-between;
   position: relative;
+  @media (min-width: 1100px) {
+    flex-direction: row;
+  }
   &__left {
     padding: 120px 0;
   }
@@ -17,7 +21,10 @@
     line-height: 83px;
     letter-spacing: 0%;
     text-align: left;
-    width: 571px;
+    max-width: 571px;
+    @media (min-width: 1100px) {
+      width: 571px;
+    }
   }
   &__text {
     color: rgb(255, 255, 255);
@@ -39,9 +46,18 @@
   }
   &__right {
     img {
-      position: absolute;
+      // position: absolute;
       // width: 100%;
-      top: -100px;
+      width: 400px;
+      // top: -100px;
+      @media (min-width: 450px) {
+        // width: 400px;
+      }
+      @media (min-width: 1100px) {
+        position: absolute;
+        width: 800px;
+        top: -100px;
+      }
     }
   }
 }
