--- a/src/components/homes/homes.scss
+++ b/src/components/homes/homes.scss
@@ -7,7 +7,13 @@
   gap: 10px;
   padding: 0 20px;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(1, 1fr);
+  @media (min-width: 750px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  @media (min-width: 950px) {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 
 .hero-banner-card {
